# archivum_project

./: .gitignore  LICENSE  README.md  doc-test.bat  doc-test.ps1  perf.prof  pyproject.toml  requirements.txt  uv
archivum/: __init__.py  arc_grammar.lark  cli.py  config.py  crossref.py  doc_tools.py  document.py  gui.py  hasher.py  library.py  logger_shim.py  mendeley_port.py  parser.py  querex.py  querier.py  reference.py  requirements.txt  trie.py  utilities.py
docs/: conf.py  index.rst  modules.rst
port_mendeley/: README.md
rust/pycomfy/: Cargo.toml
rust/pycomfy/src/: lib.rs
temp/: Bibtex-to-df-and-tidy.ipynb  author_list.md  books.bib  dm.csv  documents.ipynb  f2.py  fcli.py  full-text-search.ipynb  fuzzy.py  go-bak.py  go.py  grammar.md  great2_bibtex.py  lazy_parser.py  library.ipynb  names-for-gpt.csv  new-import.ipynb  p5.py  parser-tests.ipynb  parser.py  parser_lark.py  parser_lark_g.py  parser_lark_gpro.py  parser_ply.py  pdf-meta-data.ipynb  ptk_cline.py  ref_df.csv  rich_cline.py  scratch.py  snippets.ipynb  table-formatter.ipynb  table_w.py  text-extractor.ipynb  tries.ipynb
