[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archivum"
dynamic = ["version"]
description = "PDF Reference Manager."
authors = [{name = "Stephen J Mildenhall", email = "mynl@me.com"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click",
    "greater_tables",
    "numpy",
    "pandas",
    "prompt_toolkit",
    "pyarrow",
    "pyyaml",
    "aggregate",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities"
]

[tool.setuptools.packages.find]
include = ["archivum"]
exclude = ["docs", "temp"]

[tool.setuptools.dynamic]
version = { attr = "archivum.__version__.__version__" }

[project.scripts]
archivum = "archivum.cli:entry"
