[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archivum"
dynamic = ["version"]
description = "PDF Reference Manager."
authors = [{name = "Stephen J Mildenhall", email = "mynl@me.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click",
    "greater_tables>=5.2.1",
    "lark",
    "latexcodec",
    "numpy",
    "pandas",
    "pendulum",
    "prompt_toolkit",
    "pyarrow",
    "pymupdf",   # fitz
    "pypdf",
    "python_Levenshtein",
    "pyyaml",
    "rapidfuzz",
    "requests",
    "tqdm",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"
]

[tool.setuptools.packages.find]
include = ["archivum"]
exclude = ["docs", "temp"]

[tool.setuptools.dynamic]
version = { attr = "archivum.__version__" }

[project.scripts]
archivum = "archivum.cli:entry"

[project.urls]
"Source Code" = "https://github.com/mynl/archivum_project"

[project.optional-dependencies]
dev = [
    "docutils",
    "jupyter-sphinx",
    "nbsphinx",
    "pickleshare",
    "recommonmark",
    "setuptools>=62.3.2",
    "sphinx>=5.0",
    "sphinx-rtd-dark-mode",
    "sphinxcontrib-bibtex",
    "sphinx-copybutton",
    "sphinx-toggleprompt",
    "sphinx-multitoc-numbering"
]
